--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "eslint-plugin-vue": "^7.0.0",
     "js-base64": "^3.6.0",
     "pinyin": "^2.10.2",
-    "node-sass": "^5.0.0",
+    "node-sass": "4.0.0",
     "sass-loader": "^10.1.0"
   }
 }
