--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,7 @@
 {
     "singleQuote": true,
     "semi": false,
-    "printWidth": 120
+    "printWidth": 120,
+    "arrowParens": "always",
+    "bracketSameLine": true
 }
