update: update prettier

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,7 @@
     "semi": false,
     "printWidth": 120,
     "arrowParens": "always",
-    "bracketSameLine": true
+    "bracketSameLine": true,
+    "tabWidth": 2,
+    "trailingComma": "all"
 }
